# public/swagger.json
@@ -54,6 +54,52 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"CreateBook": {
+				"properties": {
+					"title": {
+						"type": "string"
+					},
+					"publish_year": {
+						"type": "number",
+						"format": "double"
+					},
+					"author_id": {
+						"type": "number",
+						"format": "double"
+					},
+					"isbn": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"title",
+					"publish_year",
+					"author_id",
+					"isbn"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"PatchBook": {
+				"properties": {
+					"title": {
+						"type": "string"
+					},
+					"publish_year": {
+						"type": "number",
+						"format": "double"
+					},
+					"author_id": {
+						"type": "number",
+						"format": "double"
+					},
+					"isbn": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -90,6 +136,123 @@
 				],
 				"security": [],
 				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateBook",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/BookDTO"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Books"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateBook"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/books/{id}": {
+			"get": {
+				"operationId": "GetBook",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/BookDTO"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Books"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			},
+			"patch": {
+				"operationId": "UpdateBook",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/BookDTO"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Books"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/PatchBook"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/authors": {
